[package]
name = "hypibole-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Drew Buckley <drew.buckley10@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = {version = "1.0", features = ["derive"] }
