[package]
name = "hypibole"
version = "0.1.0"
edition = "2021"
authors = ["Drew Buckley <drew.buckley10@gmail.com"]

[dependencies]
futures = "*"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }
bytes = "1.1"
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
rppal = "0.13.1"
atomic_refcell = "0.1.8"
form_urlencoded = "1.0.1"
